--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-transform-flow-strip-types": "^7.26.5",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -18,13 +19,16 @@
     "expo-location": "^18.0.10",
     "expo-notifications": "^0.29.14",
     "expo-status-bar": "~2.0.1",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-maps": "^1.22.6",
     "react-native-paper": "^5.13.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tailwind-rn": "^4.2.0",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
